cluster/apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    gethomepage.dev/description: "Prowlarr Indexer Manager"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/icon: sh-prowlarr
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prowlarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - prowlarr.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
